--- a/.gitignore
+++ b/.gitignore
@@ -138,7 +138,7 @@ com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
 fabric.properties
-
+.idea/
 .idea/misc.xml
 .idea/ogc_om_interface.iml
 .idea/workspace.xml
