--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,9 @@
 language: python
+python: "3.6"
 install:
   pip install -r requirements.txt
+  - python setup.py build_ext --inplace
 script:
   pytest
+
+
