update travis and changes imports for tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,11 @@ language: python
 python: "3.6"
 install:
   - pip install -r requirements.txt
+  - pip install python-coveralls  # Add me to install python-coveralls
   - python setup.py build_ext --inplace
 script:
   pytest
+after_success:
+  - coveralls
 
 
