--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ install:
   - pip install python-coveralls  # Add me to install python-coveralls
   - python setup.py build_ext --inplace
 script:
-  pytest
+  - pytest
 after_success:
   - coveralls
 
