--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: python
 python: "3.6"
 install:
   - pip install -r requirements.txt
-  - pip install python-coveralls  # Add me to install python-coveralls
+  - pip install python-coveralls
   - python setup.py build_ext --inplace
 script:
   pytest
