--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ python: "3.6"
 install:
   - pip install -r requirements.txt
   - pip install python-coveralls
+  - pip install coveralls
   - python setup.py build_ext --inplace
 script:
   pytest
