--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ install:
   - pip install python-coveralls
   - pip install coveralls
   - python setup.py build_ext --inplace
+  - python coverage run setup.py test
 script:
   pytest
 after_success:
