--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,12 @@ install:
   - pip install -r requirements.txt
   - pip install python-coveralls
   - pip install coveralls
-  - python setup.py build_ext --inplace
+  - pip install coverage
   - python coverage run setup.py test
+  - python setup.py build_ext --inplace
 script:
-  pytest
+  - pytest
 after_success:
-  coveralls
+  - coveralls
 
 
