--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ install:
   - pip install python-coveralls
   - pip install coveralls
   - pip install coverage
-  - python coverage run setup.py test
+  - coverage run setup.py test
   - python setup.py build_ext --inplace
 script:
   - pytest
