--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,13 @@ install:
   - pip install python-coveralls
   - pip install coveralls
   - pip install coverage
+  - pip install codecov
   - python setup.py build_ext --inplace
 script:
   - coverage run setup.py test
   - pytest
 after_success:
   - coveralls
+  - codecov
 
 
