--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,7 @@ language: python
 python: "3.6"
 install:
   - pip install -r requirements.txt
-  - pip install python-coveralls
-  - pip install coveralls
-  - pip install coverage
+  - pip install -r requirements-dev.txt
   - python setup.py build_ext --inplace
 script:
   - coverage run setup.py test
