--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,7 @@ install:
   - pip install -r requirements-dev.txt
   - python setup.py build_ext --inplace
 script:
-  - coverage run setup.py test
-  - pytest
+  - pytest -x hydsensread -v -rw --cov=hydsensread
 after_success:
   - coveralls
 
